sort.basic.cocktail.AlgCocktailSort1.scala.error
Erreur de compilation :
AlgCocktailSort1:19: error: illegal start of simple expression
   }
   ^AlgCocktailSort1:20: error: 'while' expected but '}' found.
} 
^